[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-red-teaming-index"
version = "1.1.0"
description = "Comprehensive AI red teaming index: tools, frameworks, benchmarks, datasets, and vulnerability leaderboards"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Alpha One Index", email = "alpha.one.hq@proton.me" }
]
keywords = [
    "ai-red-teaming",
    "llm-security",
    "adversarial-testing",
    "jailbreak",
    "prompt-injection",
    "ai-safety",
    "vulnerability-leaderboard",
    "benchmarks"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = []  # stdlib only

[project.urls]
Homepage = "https://alpha-one-index.github.io/ai-red-teaming-index/"
Repository = "https://github.com/alpha-one-index/ai-red-teaming-index"
"Bug Tracker" = "https://github.com/alpha-one-index/ai-red-teaming-index/issues"
Documentation = "https://github.com/alpha-one-index/ai-red-teaming-index#readme"
Changelog = "https://github.com/alpha-one-index/ai-red-teaming-index/blob/main/CHANGELOG.md"
